update code for searchVC ( done table view )

--- a/Teko-Dev-Test/Podfile
+++ b/Teko-Dev-Test/Podfile
@@ -11,5 +11,6 @@ target 'Teko-Dev-Test' do
   pod 'SVProgressHUD'
   pod 'RxSwift', '~> 5'
   pod 'RxCocoa', '~> 5'
+  pod 'AlamofireImage', '~> 3.5'
 
 end
